# ChangeLog file for java
# This file is updated with Maddlog

* Thu Nov 10 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Implemented Connection methods: getClientInfo(name) and getClientInfo().
  They used to return null and empty Properties object.
  Method Connection.setHoldability(ResultSet.CLOSE_CURSORS_AT_COMMIT) now
  throws an SQLFeatureNotSupportedException.

* Thu Oct 13 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected implementation of java.sql.Wrapper methods isWrapperFor()
  and unwrap().  They now properly return expected results instead of
  always return false or throw an SQLException.

* Thu Oct  6 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected return values of DatabaseMetaData methods nullsAreSortedHigh(),
  nullsAreSortedLow(), getMaxCursorNameLength(), getMaxProcedureNameLength(),
  getMaxStatementLength() and getMaxUserNameLength().
  Improved return values of DatabaseMetaData methods getMaxBinaryLiteralLength(),
  getMaxCharLiteralLength() and getMaxColumnsInTable().
- Implemented Statement methods: getQueryTimeout() and setQueryTimeout(int
  seconds).  getQueryTimeout() used to always return 0, now it returns the
  query timeout retrieved from the server.  setQueryTimeout(int seconds)
  used to always throw SQLException: query time outs not supported.
  Now it sets the query timeout for the current connection/session on
  the server.

* Thu Sep 29 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected ResultSet methods: getByte(), getBigDecimal(), getShort(),
  getInt(), getLong(), getFloat() and getDouble() in case the conversion
  to the native type failed due to a Number Format conversion error.
  It used to silently ignore the conversion error and return 0 instead,
  which is not correct.  Now it throws an SQLException with message
  "Could not convert value to a number." and SQLstate "22003" meaning:
  Numeric value out of range.
